--- a/components/xvj09gte3-java-quarkus/overlays/development/deployment-patch.yaml
+++ b/components/xvj09gte3-java-quarkus/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: xvj09gte3-java-quarkus
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/dance-bootstrap-app:latest
-        name: container-image  
+        - image: rhtap-quay-quay-rhtap-quay.apps.rosa.kx-96fa444336.pysq.p3.openshiftapps.com/rhtap/rhtap-qe:72c09d6bfd864b95b2a2cd6a881fafb72942baf0@sha256:b62201e1e246ad8257d34189040953123d6f989373b31a243d995a8fb4283c82
+          name: container-image
